correct issue with popup form radio toggles on IE

--- a/patternlab/public/_sass/atoms/_input.control.scss
+++ b/patternlab/public/_sass/atoms/_input.control.scss
@@ -228,9 +228,6 @@ form {
 .checkbox input[type="checkbox"],
 .checkbox-inline input[type="checkbox"] {
     margin-top: 9px;
-    .news-form & {
-        margin-top: 5px;
-    }
 }
 
 //
